--- a/next-app/package.json
+++ b/next-app/package.json
@@ -13,12 +13,15 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "canvas": "^2.11.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "konva": "^9.2.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-konva": "^18.2.10",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
